@@ -1,3 +1,7 @@
+    - added support for Net::Server by allowing the usage of
+      distinct filehandles for input and output
+      (patch by Alexei Znamensky)
+
 version 0.42 (2009/10/01):
 
     - don't hangup when receiving abandonRequest in order to support
